--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
     <form id="form" class="form">
         <h1 class="title">Formularz rejestracyjny</h1>
         <div class="form-field">
-            <label class="control-label" for="name">Imię:</label>
+            <label class="label-control" for="name">Imię:</label>
             <input class="input-control" type="text" name="name" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="surname">Nazwisko:</label>
+            <label class="label-control" for="surname">Nazwisko:</label>
             <input class="input-control" type="text" name="surname" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="email">e-mail:</label>
+            <label class="label-control" for="email">e-mail:</label>
             <input class="input-control" type="email" name="email" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="tel">telefon:</label>
+            <label class="label-control" for="tel">telefon:</label>
             <input class="input-control" type="tel" name="tel" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="city">Miasto:</label>
+            <label class="label-control" for="city">Miasto:</label>
             <input class="input-control" name="city" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="street">Ulica:</label>
+            <label class="label-control" for="street">Ulica:</label>
             <input class="input-control" name="street" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="house-number">Numer domu:</label>
+            <label class="label-control" for="house-number">Numer domu:</label>
             <input class="input-control" name="house-number" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="appartement-number">Numer mieszkania:</label>
+            <label class="label-control" for="appartement-number">Numer mieszkania:</label>
             <input class="input-control" name="appartement-number" type="test" required />
         </div>
         <div class="form-field">
-            <label class="control-label" for="postalCode">Kod pocztowy</label>
+            <label class="label-control" for="postalCode">Kod pocztowy</label>
             <input class="input-control" name="postalCode" type="test" required />
         </div>
         <button class="submit-button" type="submit">Wyslij</button>
