--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form id="form" class="form" method="post">
+    <form class="form">
         <h1 class="title">Formularz rejestracyjny</h1>
         <div class="form-field">
             <label for="name"></label>Imię:</label>
@@ -65,7 +65,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./form.js"></script>
     <script src="./handleKeyUp.js"></script>
-    <script src="./inputs.js"></script>
+    <script src="./optionsFactory.js"></script>
     <script src="./mocks.js"></script>
     <script src="./postalCodeValidate.js"></script>
     <script src="./index.js"></script>
