Rename variables texts and element names linked with miejscowosc.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                 title="Dziewięciocyfrowy numer telefonu poprzedzony prefiksem lub bez prefiksu" />
         </div>
         <div class="form-field">
-            <label for="city">Miasto:</label>
-            <select name="city" type="text" required>
-                <option name="option-description-city" value="">Wpisz kod pocztowy by wybrać miasto</option>
+            <label for="locality">Miejscowość:</label>
+            <select name="locality" type="text" required>
+                <option name="option-description-locality" value="">Wpisz kod pocztowy by wybrać miasto</option>
             </select>
         </div>
         <div class=" form-field">
             <label for="street">Ulica:</label>
             <select name="street" type="text" required>
                 <option name="option-description-street" value="">Wybierz Ulicę</option>
+                <option name="option-description-street" value="">brak</option>
             </select>
         </div>
         <div class="form-field">
