--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </form>
     <!-- IMPORTS -->
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./form.js"></script>
     <script src="./handleKeyUp.js"></script>
     <script src="./optionsFactory.js"></script>
