--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <input name="postal-code" type="text" maxlength="6" required title="kod pocztowy w formacie: 00-000"
                 pattern="^[0-9]{2}-[0-9]{3}$" />
         </div>
-        <button class="submit-button" type="submit">Wyslij</button>
+        <button class="submit-button" type="submit">Wyślij</button>
     </form>
     <!-- IMPORTS -->
     <link rel="stylesheet" href="./style.css" />
