--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
     <form class="form">
         <h1 class="title">Formularz rejestracyjny</h1>
-        <div class="form-field">
-            <label for="name"></label>Imię:</label>
-            <input type="text" name="name" type="test" required pattern="^[A-ZĄĆĘŁŃÓŚŹŻ][a-ząćęłńóśźż]{1,}"
-                title="imię z dużej litery" />
-        </div>
-        <div class="form-field">
-            <label for="surname">Nazwisko:</label>
-            <input type="text" name="surname" type="test" pattern="^^[A-ZA-ZĄĆĘŁŃÓŚŹŻ][a-ząćęłńóśźż-]{1,}"
-                title="Nazwisko z dużej litery" />
+        <div class="form-field--group">
+            <div class="form-field">
+                <label for="name">imię:</label>
+                <input type="text" name="name" type="test" required pattern="^[A-ZĄĆĘŁŃÓŚŹŻ][a-ząćęłńóśźż]{1,}"
+                    title="imię z dużej litery" />
+            </div>
+            <div class="form-field">
+                <label for="surname">nazwisko:</label>
+                <input type="text" name="surname" type="test" pattern="^^[A-ZA-ZĄĆĘŁŃÓŚŹŻ][a-ząćęłńóśźż-]{1,}"
+                    title="Nazwisko z dużej litery" />
+            </div>
         </div>
         <div class="form-field">
             <label for="email">e-mail:</label>
@@ -33,29 +35,34 @@
                 pattern="( |^|>)((((\+|00)[0-9]{2} ?(\(0\))?)|0)([0-9]{2}-? ?[0-9]{7})|([0-9]{3}-? ?[0-9]{6})|([0-9]{1}-? ?[0-9]{8}))( |$|<)"
                 title="Dziewięciocyfrowy numer telefonu poprzedzony prefiksem lub bez prefiksu" />
         </div>
-        <div class="form-field">
-            <label for="locality">Miejscowość:</label>
-            <select name="locality" type="text" required>
-                <option name="option-description-locality" value="">Wpisz kod pocztowy by wybrać miasto</option>
-            </select>
+        <div class="form-field--group">
+            <div class="form-field">
+                <label for="locality">miejscowość:</label>
+                <select name="locality" type="text" required>
+                    <option disabled selected hidden name="option-description-locality">Wpisz kod pocztowy by wybrać
+                        miasto</option>
+                </select>
+            </div>
+            <div class=" form-field">
+                <label for="street">ulica:</label>
+                <select name="street" type="text" required>
+                    <option disabled selected hidden name="option-description-street">Wybierz Ulicę</option>
+                    <option name="option-description-street">brak</option>
+                </select>
+            </div>
         </div>
-        <div class=" form-field">
-            <label for="street">Ulica:</label>
-            <select name="street" type="text" required>
-                <option name="option-description-street" value="">Wybierz Ulicę</option>
-                <option name="option-description-street" value="">brak</option>
-            </select>
+        <div class="form-field--group">
         </div>
         <div class="form-field">
-            <label for="house-number">Numer domu:</label>
+            <label for="house-number">numer domu:</label>
             <input name="house-number" type="text" required pattern="^([0-9]|[0-9]+a){1,}" title="numer domu" />
         </div>
         <div class="form-field">
-            <label for="appartement-number">Numer mieszkania:</label>
+            <label for="appartement-number">numer mieszkania:</label>
             <input name="appartement-number" type="text" pattern="^([0-9]|[0-9]+)" title="numer mieszkania" />
         </div>
         <div class=" form-field">
-            <label for="postal-code">Kod pocztowy</label>
+            <label for="postal-code">kod pocztowy</label>
             <input name="postal-code" type="text" maxlength="6" required title="kod pocztowy w formacie: 00-000"
                 pattern="^[0-9]{2}-[0-9]{3}$" />
         </div>
