Update the house number pattern.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="form-field">
             <label for="house-number">numer domu:</label>
-            <input name="house-number" type="text" value="" required pattern="^([0-9]|[0-9-a-z]){1,}"
+            <input name="house-number" type="text" value="" required pattern="^([0-9]|[0-9][a-z]){1,}"
                 title="numer domu" />
         </div>
         <div class="form-field">
