Add missing colon.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <input name="appartement-number" type="text" value="" pattern="^([0-9]|[0-9]+)" title="numer mieszkania" />
         </div>
         <div class=" form-field">
-            <label for="postal-code">kod pocztowy</label>
+            <label for="postal-code">kod pocztowy:</label>
             <input name="postal-code" type="text" value="" maxlength="6" required
                 title="kod pocztowy w formacie: 00-000" pattern="^[0-9]{2}-[0-9]{3}$" />
         </div>
