--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@
         </div>
         <div class="form-field">
             <label for="house-number">numer domu:</label>
-            <input name="house-number" type="text" value="" required pattern="^([0-9]|[0-9][a-z]){1,}"
-                title="numer domu" />
+            <input name="house-number" type="text" required pattern="^([0-9]|[0-9][a-z]){1,}" title="numer domu" />
         </div>
         <div class="form-field">
             <label for="appartement-number">numer mieszkania:</label>
-            <input name="appartement-number" type="text" value="" pattern="^([0-9]|[0-9]+)" title="numer mieszkania" />
+            <input name="appartement-number" type="text" pattern="^([0-9]|[0-9]+)" title="numer mieszkania" />
         </div>
         <div class=" form-field">
             <label for="postal-code">kod pocztowy:</label>
-            <input name="postal-code" type="text" value="" maxlength="6" required
-                title="kod pocztowy w formacie: 00-000" pattern="^[0-9]{2}-[0-9]{3}$" />
+            <input name="postal-code" type="text" maxlength="6" required title="kod pocztowy w formacie: 00-000"
+                pattern="^[0-9]{2}-[0-9]{3}$" />
         </div>
         <button class="submit-button" type="submit">Wyślij</button>
     </form>
